added variable formatting bumped to 1.21.10